corrected page links

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                   </div>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="www.github.com/aodom3"><img src="../images/gg.png"></a>
+                        <a class="nav-link" href="https://www.github.com/aodom3"><img src="../images/gg.png"></a>
                       </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="www.facebook.com/aodom"><img src="../images/fbg.png"></a>
+                        <a class="nav-link" href="https://www.facebook.com/aodom"><img src="../images/fbg.png"></a>
                         </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="www.instagram.com/ash.lee.oh"><img src="../images/igg.png"></a>
+                        <a class="nav-link" href="https://www.instagram.com/ash.lee.oh"><img src="../images/igg.png"></a>
                         </li>
                 <li class="nav-item">
-                        <a class="nav-link" href=www.linkedin.com/in/asodom><img src="../images/lig.png"></a>
+                        <a class="nav-link" href=https://www.linkedin.com/in/asodom><img src="../images/lig.png"></a>
                         </li>
 
               </ul>
