--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>I am..</h1>
         <center><img src="images/logo.png" alt="logo"></center>
         <logo >Ashley Odom</logo>
-        <p>Hello!... Welcome to my Portfolio page. I am a full stack developer and graphic designer based in Atlanta, Georgia, or as I like to call it, ARTLANTA!
+        <p>Hello!... one two testing...Welcome to my Portfolio page. I am a full stack developer and graphic designer based in Atlanta, Georgia, or as I like to call it, ARTLANTA!
         I have a strong passion for design and code. I started out doing collages which eventually led me to print designing. I specialize in 
         commemorative booklets for families who have lost loved ones as well as photo restorations. As I progressed with my print design, I realized that my love of digital art 
         was growing stronger as well. Having a desire to empathize with users has helped me advance my app building skills tremendously.
