added to about section

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2 class="text-white mb-4">About Me</h2>
-                    <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download
-                        the template on
-                        <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                    <p class="text-white-50">I am a full stack developer and graphic designer based in Atlanta, Georgia. Before starting this journey of web developement I worked for years as a freelance print designer. Art and technology have always been two of my passions. Being able to merge the two togther to create something unique is my passion. At the moment I use React for my Front-End developement, I am also teaching myself React Native so that I may transition into my next goal of making mobile apps. 
                 </div>
             </div>
             <img src="img/ipad.png" class="img-fluid" alt="">
@@ -88,9 +86,8 @@
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
-                        <h4>Archer</h4>
-                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial
-                            projects! Download it, customize it, and publish your website!</p>
+                        <h4>Queen Sugar</h4>
+                        <p class="text-black-50 mb-0">This is the very first website I made using HTML and CSS. The main focal point of this project showcases how to use the parallax effect to create a unique user experience.</p>
                     </div>
                 </div>
             </div>
