rewrote index to match what had before merge messed up

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
                         <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+                        <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +62,7 @@
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
                 <h1 class="mx-auto my-0 text-uppercase">Ashley Odom</h1>
-                <h2 class="text-white-50 mx-auto mt-2 mb-5">Front-End Developer, Designer, and Tech Enthusiast</h2>
+                <h2 class="text-white-50 mx-auto mt-2 mb-5">Full Stack Developer Specializing in Front-End, Print Designer, and Tech Enthusiast</h2>
                 <a href="#about" class="btn btn-primary js-scroll-trigger">Welcome!</a>
             </div>
         </div>
@@ -68,7 +74,9 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2 class="text-white mb-4">About Me</h2>
-                    <p class="text-white-50">I am a full stack developer and graphic designer based in Atlanta, Georgia. Before starting this journey of web developement I worked for years as a freelance print designer. Art and technology have always been two of my passions. Being able to merge the two togther to create something unique is my passion. At the moment I use React for my Front-End developement, I am also teaching myself React Native so that I may transition into my next goal of making mobile apps. 
+                    <p class="text-white-50">I am a full stack web developer based in Atlanta, Georgia. For years i have been working as a freelance
+                        graphic designer. always had a lof of art and technology and meshed the two together
+
                 </div>
             </div>
             <img src="img/ipad.png" class="img-fluid" alt="">
@@ -78,16 +86,19 @@
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
         <div class="container">
-
+            <h2>Web Apps & Websites</h2>
+            <!-- make pics hover b&w -->
             <!-- Featured Project Row -->
             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+
                 <div class="col-xl-8 col-lg-7">
-                    <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+                    <img class="img-fluid mb-3 mb-lg-0" src="img/archer.png" alt="">
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
-                        <h4>Queen Sugar</h4>
-                        <p class="text-black-50 mb-0">This is the very first website I made using HTML and CSS. The main focal point of this project showcases how to use the parallax effect to create a unique user experience.</p>
+                        <h4>Archer</h4>
+                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial
+                            projects! Download it, customize it, and publish your website!</p>
                     </div>
                 </div>
             </div>
@@ -95,7 +106,7 @@
             <!-- Project One Row -->
             <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+                    <img class="img-fluid" src="img/lebron.png" alt="">
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
@@ -108,12 +119,13 @@
                         </div>
                     </div>
                 </div>
+
             </div>
 
             <!-- Project Two Row -->
             <div class="row justify-content-center no-gutters">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+                    <img class="img-fluid" src="img/livi.png" alt="">
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
@@ -129,9 +141,10 @@
                 </div>
             </div>
 
+            <!-- Project Three Row -->
             <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+                    <img class="img-fluid" src="img/drink.png" alt="">
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
@@ -146,10 +159,10 @@
                 </div>
             </div>
 
-            <!-- Project Three Row -->
+            <!-- Project Four Row -->
             <div class="row justify-content-center no-gutters">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+                    <img class="img-fluid" src="img/sub.png" alt="">
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
@@ -169,7 +182,8 @@
     </section>
 
     <!-- Education Section -->
-    <section id="about" class="about-section text-center">
+
+    <section id="education" class="about-section text-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
@@ -188,6 +202,20 @@
                     <h2 class="text-white mb-4">Skills</h2>
                     <p class="text-white-50">im full stack but really interested in front end development and design break down into front end back
                         end design paragraphs side by side
+                        <div class="text-white-50">
+                            <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Photoshop 85%</div>
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+
+                        </div>
                         <ul>
                             <li>photoshop</li>
                             <li>indesign</li>
@@ -227,7 +255,7 @@
     </section> -->
 
     <!-- Contact Section -->
-    <section class="contact-section bg-black">
+    <section id="contact" class="contact-section bg-black">
         <div class="container">
 
             <div class="row">
