--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2 class="text-white mb-4">About Me</h2>
-                    <p class="text-white-50">I am a full stack web developer based in Atlanta, Georgia. For years i have been working as a freelance
-                        graphic designer. always had a lof of art and technology and meshed the two together
+                    <p class="text-white-50">I am a full stack developer and graphic designer based in Atlanta, Georgia. Before starting this journey of web developement
+                    I worked for years as a freelance print designer. Art and technology have always been two of my passions. Being able to merge
+                    the two togther to create something unique is my passion. At the moment I use React for my Front-End developement, I am also
+                    teaching myself React Native so that I may transition into my next goal of making mobile apps.
 
                 </div>
             </div>
