--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
     </section>
     <!-- Skills Section -->
-    <section id="about" class="about-section text-center">
+    <section id="skills" class="about-section text-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
@@ -292,7 +292,7 @@
                             <i class="fas fa-mobile-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4">
-                            <div class="small text-black-50">(404)946-8799</div>
+                            <div class="small text-black-50"><a href="tel:+1-404-946-8799">(404)946-8799</a></div>
                         </div>
                     </div>
                 </div>
