changed color from teal to pink

--- a/index.html
+++ b/index.html
@@ -201,43 +201,51 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">Skills</h2>
+                    <h2 class="text-white mb-4"> Technical Skills</h2>
                     <p class="text-white-50">im full stack but really interested in front end development and design break down into front end back
                         end design paragraphs side by side
-                        <div class="text-white-50">
-                            <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Photoshop 85%</div>
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
 
-                        </div>
-                        <ul>
-                            <li>photoshop</li>
-                            <li>indesign</li>
-                            <li>html/css</li>
-                            <li>JavaScript</li>
-                            <li>React</li>
-                            <li>Express/Node</li>
-                            <li>mongodb</li>
-                            <li>sketchapp</li>
-                            <li>wireframes/user stories</li>
-                            <li>agile enviroments</li>
-                        </ul>
+                <div class="row">
+                    <div class="container">
+                         <div class="row">
+                            <div class="col-md-3 text-white-center">
+                    <h2 class="text-white mb-4">Font-End</h2>
+                    <canvas id="doughnut" width="120" height="120"></canvas>
+                    <canvas id="skill1" width="120" height="120" class=""></canvas>
+                    <p class="text-white-50">React. Teaching myself React native and angular. Html/CSS and JavaScript</p>
+                </div>
+                <div class="col-md-3 text-center">
+                    <h2 class="text-white mb-4">Back-End</h2>
+                    <canvas id="doughnut2" width="120" height="120"></canvas>
+                    <canvas id="skill2" width="120" height="120" class=""></canvas>
+                    <p class="text-white-50">Express, Node, mongodb</p>
+                </div>
+                <div class="col-md-3 text-center">
+                    <h2 class="text-white mb-4">Design</h2>
+                    <canvas id="doughnut3" width="120" height="120"></canvas>
+                    <canvas id="skill3" width="120" height="120" class=""></canvas>
+                    <p class="text-white-50">Specializing in print design. Use photoshop along with indesign to create....</p>
+                </div>
+                <div class="col-md-3 text-center">
+                    <h2 class="text-white mb-4">Planning</h2>
+                    <canvas id="doughnut4" width="120" height="120"></canvas>
+                    <canvas id="skill4" width="120" height="120" class=""></canvas>
+                    <p class="text-white-50">Wireframes and user stories, using sketchapp basalmiq..trello. used to working in an agile enviroment
                     </p>
                 </div>
             </div>
-            <img src="img/ipad.png" class="img-fluid" alt="">
+        </div>
+    </div>
+</div>
+
+                    </p>
+                </div>
+            </div>
+            <!-- <img src="img/ipad.png" class="img-fluid" alt=""> -->
         </div>
     </section>
 
-    <!-- Signup Section
+    <!-- Signup Section -->
     <section id="signup" class="signup-section">
         <div class="container">
             <div class="row">
@@ -254,7 +262,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section bg-black">
@@ -262,16 +270,28 @@
 
             <div class="row">
 
-                <!-- <div class="col-md-4 mb-3 mb-md-0">
+                <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Linked-In</h4>
+                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4">
-                            <div class="small text-black-50">wwww</div>
+                            <div class="small text-black-50">
+                                <a href="tel:+1-404-946-8799">(404)946-8799</a>
+                            </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <i class="fa fa-skype"></i>
+                            <h4 class="text-uppercase m-0">Skype</h4>
+                            <hr class="my-4">
+                            <div class="small text-black-50"></div>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
@@ -286,16 +306,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Phone</h4>
-                            <hr class="my-4">
-                            <div class="small text-black-50"><a href="tel:+1-404-946-8799">(404)946-8799</a></div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
 
             <div class="social d-flex justify-content-center">
