added extra section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                         <a class="nav-link js-scroll-trigger" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+                        <a class="nav-link js-scroll-trigger" href="#projects">Apps</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#design">Design</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -73,7 +76,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">About Me</h2>
+                    <h1 class="text-white mb-4">About Me</h1>
                     <p class="text-white-50">I am a full stack developer and graphic designer based in Atlanta, Georgia. Before starting this journey of web developement
                     I worked for years as a freelance print designer. Art and technology have always been two of my passions. Being able to merge
                     the two togther to create something unique is my passion. At the moment I use React for my Front-End developement, I am also
@@ -88,19 +91,18 @@
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
         <div class="container">
-            <h2>Web Apps & Websites</h2>
+            <center><h1>Web Apps & Websites</h1></center>
             <!-- make pics hover b&w -->
             <!-- Featured Project Row -->
             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
 
                 <div class="col-xl-8 col-lg-7">
-                    <img class="img-fluid mb-3 mb-lg-0" src="img/archer.png" alt="">
+                    <img class="img-fluid mb-3 mb-lg-0" src="img/archer.png" alt="archer">
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
                         <h4>Archer</h4>
-                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial
-                            projects! Download it, customize it, and publish your website!</p>
+                        <p class="text-black-50 mb-0">This was a fun project I enjoyed doing! It is a basic "fan" site consisting of html/css and Javascript. CSS transitions as well as using flexbox was a huge part in the visual outcome of this project. </p>
                     </div>
                 </div>
             </div>
@@ -108,14 +110,15 @@
             <!-- Project One Row -->
             <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/lebron.png" alt="">
+                    <a href="https://github.com/aodom3/LeBron">
+                    <img class="img-fluid" src="img/lebron.png" alt="lebron"></a>
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Lebron</h4>
-                                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                <p class="mb-0 text-white-50">Purely html,css, and JavaScript. This app was basically a demonstration of using css properties together to create something really awesome</p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
                             </div>
                         </div>
@@ -134,8 +137,7 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Livi's Calculator</h4>
-                                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively
-                                    as well, try this theme on a small screen!</p>
+                                <p class="mb-0 text-white-50">cute javascript app</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0">
                             </div>
                         </div>
@@ -153,7 +155,7 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Drink 'N' Dash</h4>
-                                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                <p class="mb-0 text-white-50">A full stack app using mongodb, express, react, and node.</p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
                             </div>
                         </div>
@@ -171,20 +173,24 @@
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Sub's Little Helper</h4>
-                                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively
-                                    as well, try this theme on a small screen!</p>
+                                <p class="mb-0 text-white-50">This project is a full-stack application using React and Ruby on Rails.</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    
+    <!-- Design Section -->
+    <section id="design" class="apps-section bg-dark">
+        <div class = "container">
+            <h2>hiiiii</h2>
 
         </div>
     </section>
-
     <!-- Education Section -->
-
     <section id="education" class="about-section text-center">
         <div class="container">
             <div class="row">
