--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/ico" href="img/favicon.ico" />
+
 </head>
 
 <body id="page-top">
@@ -46,11 +49,12 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#design">Design</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-                    </li>
+    
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#education">Education</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -190,18 +194,7 @@
 
         </div>
     </section>
-    <!-- Education Section -->
-    <section id="education" class="about-section text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">Education</h2>
-                    <p class="text-white-50">Georgia State University -- Political Science, BA General Assembly --Full Stack Web Devlopement Immersive
-                </div>
-            </div>
-            <img src="img/ipad.png" class="img-fluid" alt="">
-        </div>
-    </section>
+
     <!-- Skills Section -->
     <section id="skills" class="about-section text-center">
         <div class="container">
@@ -251,20 +244,13 @@
         </div>
     </section>
 
-    <!-- Signup Section -->
-    <section id="signup" class="signup-section">
+    <!-- Education Section -->
+    <section id="education" class="education-section text-center">`
         <div class="container">
             <div class="row">
-                <div class="col-md-10 col-lg-8 mx-auto text-center">
-
-                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                    <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-
-                    <form class="form-inline d-flex">
-                        <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-                        <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-                    </form>
-
+                <div class="col-lg-8 mx-auto">
+                    <h2 class="text-white mb-4">Education</h2>
+                    <p class="text-white-50">2013 Georgia State University -- Political Science, BA 2018 Per Scholas --Front-End Development General Assembly 2018 --Full Stack Web Devlopement Immersive
                 </div>
             </div>
         </div>
@@ -306,7 +292,7 @@
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="#">aodom3@gmail.com</a>
+                                <a href="mailto:aodom3@gmail.com">aodom3@gmail.com</a>
                             </div>
                         </div>
                     </div>
