finished up education

--- a/index.html
+++ b/index.html
@@ -250,7 +250,17 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2 class="text-white mb-4">Education</h2>
-                    <p class="text-white-50">2013 Georgia State University -- Political Science, BA 2018 Per Scholas --Front-End Development General Assembly 2018 --Full Stack Web Devlopement Immersive
+                    <li class="text-white-50"> Georgia State University, 2013
+                        </br>Political Science, BA
+                    </li>
+                </br>
+                    <li class="text-white-50"> PerScholas, 2018
+                        </br>Front-End Development
+                    </li>
+                </br>
+                    <li class="text-white-50"> General Assembly, 2018
+                        </br>Full Stack Web Devlopement Immersive
+                    </li>
                 </div>
             </div>
         </div>
